# path_tracer

./: CMakeLists.txt  README.md
src/: main.cpp  main_old.cpp
src/camera/: camera.cpp  camera.h
src/math/: matrix.cpp  matrix.h  ray.cpp  ray.h  vector.cpp  vector.h
src/renderer/: path_tracer.h  sampler.h
src/scene/: aabb.h  bvh.h  hittable.h  hittable_list.h  material.h  object.h  rectangular_prism.h  scene (copie).h  scene.h  sphere.h
src/utils/: image.h  random.cpp  random.h  timer.h
